# substrate

./: .dockerignore  .env  .gitignore  CLAUDE_DESKTOP_CONFIG.md  CONTRIBUTING.md  Dockerfile  JSON_VS_YAML.md  README.md  YAML_FORMAT.md  build.bat  build.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.bat  setup.py  test_documentation.py  test_model_config.py  test_new_documentation.py  test_workflows.py
data/: README.md
data/knowledge/: .freshness_index.yaml
data/knowledge/facts/domain/: .index.yaml
data/knowledge/facts/mathematical/: .index.yaml
data/knowledge/facts/scientific/: .index.yaml
data/knowledge/facts/technical/: .index.yaml  mdtr_testbench_architecture.md  mdtr_testbench_cli_reference.md
data/knowledge/insights/experimental/: .index.yaml  mdtr_testbench_troubleshooting_guide.md
data/knowledge/insights/hypotheses/: .index.yaml
data/knowledge/insights/lessons_learned/: .index.yaml  mdtr_testbench_golden_rules_and_best_practices.md
data/knowledge/insights/project_specific/: .index.yaml  mdtr_creative_writing_research_strategy.md
data/knowledge/patterns/architectural/: .index.yaml  mdtr_testbench_plugin_development_guide.md
data/knowledge/patterns/behavioral/: .index.yaml
data/knowledge/patterns/operational/: .index.yaml  mdtr_testbench_development_patterns.md
data/knowledge/patterns/organizational/: .index.yaml
data/refs/demo/: content.yaml  docker_explanation.yaml
data/sessions/: session_20251001_112021.md  session_20251002_114040.md  session_20251002_114339.md  session_20251002_114738.md  session_20251002_114852.md  session_20251002_115139.md  session_20251002_115441.md
data/tloen/refs/sites/: reddit.yaml  stackoverflow.yaml
data/uqbar/refs/personas/: academic.yaml  casual.yaml
docs/: ARCHITECTURE.md  INSTANCES.md  README.md  adr-quick-reference.md  asr-v2.md  atlas-claude-config.json  atlas.md  component-map.json  documentation-enhancement.md  mcp-config-example.md  system-design.md
docs/changelog/: 2025-01-20-akab-adrs.md
example_refs/: hemingway_persona.yaml  reddit_format.yaml
src/: __init__.py  __main__.py  base.py  errors.py  progress.py  responses.py  sampling.py  types.py  utils.py
src/evaluation/: __init__.py  evaluation.py
src/filesystem/: __init__.py  filesystem.py
src/mcp/: __init__.py
src/mcp/server/: __init__.py  fastmcp.py
src/providers/: __init__.py  providers.py
src/substrate/: __init__.py  __main__.py  base.py  components.py  errors.py  server.py  server_fastmcp.py
src/substrate/features/: __init__.py
src/substrate/features/documentation/: __init__.py  handler.py  tool.py
src/substrate/features/execution/: __init__.py  handler.py  tool.py
src/substrate/features/references/: __init__.py  handler.py  tool.py
src/substrate/features/workflow_navigation/: __init__.py  handler.py  tool.py
src/substrate/shared/: __init__.py  errors.py
src/substrate/shared/api/: __init__.py  clear_hermes.py
src/substrate/shared/config/: __init__.py  external_loader.py
src/substrate/shared/instance/: __init__.py
templates/: compose.template.yml  dockerfile.template
test_scripts/: check_fastmcp.py
tests/: __init__.py  test_base.py  test_substrate.py
tools/: model-config.bat  model-config.py  model-config.sh
(+22 files in other folders)
